--- a/src/app/components/guid/guid.component.css
+++ b/src/app/components/guid/guid.component.css
@@ -32,8 +32,7 @@
     font-weight: 300;
     line-height: 1.2;
     text-align: left;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
+    color: gray;
 }
 
 .bttn .btn {
