--- a/src/app/components/happycustomer/happycustomer.component.css
+++ b/src/app/components/happycustomer/happycustomer.component.css
@@ -48,8 +48,7 @@
     font-weight: 200;
     line-height: 20px;
     text-align: left;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
+    color: gray;
     margin-bottom: 50px;
 }
 
